# rails_fast_attributes

./: .gitignore  .travis.yml  Cargo.toml  Gemfile  LICENSE-APACHE  LICENSE-MIT  README.md  Rakefile  rails_fast_attributes.gemspec
ci/: before_deploy.sh
lib/: rails_fast_attributes.rb
lib/rails_fast_attributes/: version.rb
spec/: attribute_set_spec.rb  attribute_spec.rb  rails_fast_attributes_spec.rb  spec_helper.rb
src/: into_ruby.rs  lib.rs  util.rs
src/attribute/: mod.rs  ruby_glue.rs
src/attribute_set/: mod.rs  ruby_glue.rs
src/builder/: mod.rs  ruby_glue.rs
